--- a/package.json
+++ b/package.json
@@ -7,10 +7,16 @@
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "firebase": "^11.0.1",
+    "framer-motion": "^11.11.11",
+    "group": "^1.0.2",
+    "gsap": "^3.12.5",
+    "gsap-trial": "^3.12.5",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-router-dom": "^6.28.0",
     "react-scripts": "5.0.1",
+    "react-transition": "^1.0.3",
+    "react-transition-group": "^4.4.5",
     "sass": "^1.80.6",
     "scss": "^0.2.4",
     "web-vitals": "^2.1.4"
