--- a/package.json
+++ b/package.json
@@ -11,6 +11,8 @@
     "gsap": "^3.12.5",
     "gsap-trial": "^3.12.5",
     "react": "^18.3.1",
+    "react-countdown": "^2.3.6",
+    "react-countdown-circle-timer": "^3.2.1",
     "react-dom": "^18.3.1",
     "react-router-dom": "^6.28.0",
     "react-scripts": "5.0.1",
